shelter/src/style/components/_modal-window.scss
.modal{
  display: block;
  visibility: hidden;
  opacity: 0;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: rgba(41, 41, 41, 0.6);
  @extend %transition;
}
.modal-window{
  display: block;
  position: absolute;
  width: 900px;
  height: 500px;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  background: $color-light-s;
  border-radius: 9px;
  @include media-laptop{
    width: calc(630px + (900 - 630) * ((100vw - 768px)/(1070 - 768)));
    height: calc(350px + (500 - 350) * ((100vw - 768px)/(1070 - 768)));
  }
  @include media-change-menu{
    width: calc(240px + (630 - 240) * ((100vw - 320px)/(767.8 - 320)));
    height: auto;
  }
}

.modal-window__close-element{
  position: absolute;
  width: 50px;
  height: 50px;
  top: -51px;
  right: -41px;
  border-radius: 50%;
  border: 2px solid $color-primary;
  display: flex;
  justify-content: center;
  align-items: center;
  @extend %transition;
  span{
    font-size: 19px;
    font-weight: 900;
  };
  &:hover{
    cursor: pointer;
    border-color: $color-primary-light;
    background-color: $color-primary-light;
  }
  @include media-change-menu{
    right: -29px;
  }
}

.modal-window__img
  img{
    width: 500px;
    height: 500px;
    border-radius: 9px;
    @include media-laptop{
      width: calc(350px + (500 - 350) * ((100vw - 768px)/(1070 - 768)));
      height: calc(350px + (500 - 350) * ((100vw - 768px)/(1070 - 768)));
    }
  @include media-change-menu{
    display: none;
  }
}
.modal-window__content{
  display: flex;
  flex-direction: row;
  gap: 29px;
  span{
    font-weight: bold;
  }
  @include media-laptop{
    gap: calc(11px + (29 - 11) * ((100vw - 768px)/(1070 - 768)));
  }
  @include media-change-menu{
    justify-content: center;
  }
}
.modal-window__info{
  margin: 50px 20px 0 0;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 40px;
  ul{
    margin: 0;
    padding-left: 17px;
    display: flex;
    flex-direction: column;
    gap: 12px;
    li{
      margin: 0;
      padding: 0;
      @include font($size: 15px, $height: 110%, $spacing: 0.06em);
    }
    li::marker{
      color: $color-primary;
    }
    @include media-laptop{
      gap: calc(6px + (12 - 6) * ((100vw - 768px)/(1070 - 768)))
    }
    @include media-change-menu{
      margin-top: 4px;
      gap: 7px;
    }
  }
  @include media-laptop{
    margin: calc(11px + (50 - 11) * ((100vw - 768px)/(1070 - 768))) calc(8px + (20 - 8) * ((100vw - 768px)/(1070 - 768))) 0 0;
    gap: calc(19px + (40 - 19) * ((100vw - 768px)/(1070 - 768)));
  }
  @include media-change-menu{
    margin: 10px;
    gap: 19px;
  }
}

.info__title{
  h3{
    @include font($size: 3.5rem, $height: 130%);
  }
  h4{
    @include font($size: 2.0rem, $height: 115%);
  }
  .info__breed{
    margin-top: 10px;
  }
  @include media-change-menu{
    text-align: center;
  }
}

.info__description{
  @include media-change-menu{
    text-align: justify;
  }
}

